Hardcode width and height of logo, fix header height on smaller displays

--- a/src/css/overrides.css
+++ b/src/css/overrides.css
@@ -23,6 +23,13 @@ table {
   background-color: var(--ifm-navbar-link-color);
 }
 
+@media (max-height: 768px) {
+  .header-github:before {
+    height: 20px;
+    width: 20px;
+  }
+}
+
 .header-github:hover:before {
   background-color: var(--ifm-navbar-link-hover-color);
 }
